[package]
name = "bevy_generative_grammars"
description = "A plugin for handling generative grammars in bevy"
version = "0.0.0"
authors = ["Lee-Orr"]
homepage = "https://lee-orr.com"
repository = "https://github.com/lee-orr/bevy-generative-grammars"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
resolver = "2"

[workspace]
members = ["./", "tools/ci"]

[features]
default = [
    "json"
]

bevy = [
    "dep:bevy",
]

serde = [
    "dep:serde"
]

asset = [
    "bevy",
    "serde",
    "dep:bevy_common_assets"
]

json = [
    "asset",
    "bevy_common_assets?/json"
]

msgpack = [
    "asset",
    "bevy_common_assets?/msgpack"
]

ron = [
    "asset",
    "bevy_common_assets?/ron"
]

toml = [
    "asset",
    "bevy_common_assets?/toml"
]

yaml = [
    "asset",
    "bevy_common_assets?/yaml"
]

[dependencies]
bevy = { version = "0.9", default-features = false, optional = true }
bevy_common_assets = { version = "0.4", optional = true }
serde = { version = "*", optional = true }

[patch.crates-io]
# We can override the bevy version with remote or local versions
# This method causes less pain to downstream users trying to work off your revisions
#bevy = { git = "https://github.com/bevyengine/bevy" }
#bevy = { path = "../bevy" }

[dev-dependencies]
criterion = "0.4"
# We can use a different feature set of Bevy for our library vs our examples and tests
bevy = { version = "0.9", default-features = false}
rand = "*"


[lib]
name = "bevy_generative_grammars"
path = "src/lib.rs"

[[bench]]
name = "tracery_stateful_generator"
path = "benches/tracery_stateful_generator.rs"
harness = false

[[bench]]
name = "tracery_stateless_generator"
path = "benches/tracery_stateless_generator.rs"
harness = false

[[example]]
name = "bevy_simple"
path = "examples/bevy_simple.rs"
required-features = ["bevy"]

[[example]]
name = "bevy_asset"
path = "examples/bevy_asset.rs"
required-features = ["json"]