[package]
name = "bevy_generative_grammars"
description = "A plugin for handling generative grammars in bevy"
version = "0.0.1"
authors = ["Lee-Orr"]
homepage = "https://lee-orr.github.io/bevy-generative-grammar"
repository = "https://github.com/lee-orr/bevy-generative-grammars"
documentation = "https://lee-orr.github.io/bevy-generative-grammars"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy", "procedural", "generation", "tracery"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
resolver = "2"

[workspace]
members = ["./", "tools/ci"]

[features]
default = ["json"]

bevy = ["dep:bevy"]

serde = ["dep:serde"]

asset = ["bevy", "serde", "dep:bevy_common_assets"]

json = ["asset", "bevy_common_assets?/json"]

msgpack = ["asset", "bevy_common_assets?/msgpack"]

ron = ["asset", "bevy_common_assets?/ron"]

toml = ["asset", "bevy_common_assets?/toml"]

yaml = ["asset", "bevy_common_assets?/yaml"]

rand = ["dep:rand"]

turborand = ["bevy", "dep:bevy_turborand"]

[dependencies]
bevy = { version = "0.11", default-features = false, optional = true }
bevy_common_assets = { version = "0.7", optional = true }
serde = { version = "1", optional = true }
rand = { version = "0.8", optional = true }
bevy_turborand = { version = "0.6", optional = true }

[patch.crates-io]
# We can override the bevy version with remote or local versions
# This method causes less pain to downstream users trying to work off your revisions
#bevy = { git = "https://github.com/bevyengine/bevy" }
#bevy = { path = "../bevy" }

[dev-dependencies]
criterion = "0.5"
# We can use a different feature set of Bevy for our library vs our examples and tests
bevy = { version = "0.11", default-features = false }


[lib]
name = "bevy_generative_grammars"
path = "src/lib.rs"

[[bench]]
name = "tracery_stateful_generator"
path = "benches/tracery_stateful_generator.rs"
harness = false

[[bench]]
name = "tracery_stateless_generator"
path = "benches/tracery_stateless_generator.rs"
harness = false

[[example]]
name = "bevy_simple"
path = "examples/bevy_simple.rs"
required-features = ["bevy", "turborand"]

[[example]]
name = "bevy_asset"
path = "examples/bevy_asset.rs"
required-features = ["json", "turborand"]

[[example]]
name = "without_bevy_stateful"
path = "examples/without_bevy_stateful.rs"
required-features = ["rand"]

[[example]]
name = "without_bevy_stateless"
path = "examples/without_bevy_stateless.rs"
required-features = ["rand"]
